handle ConcurrentModificationException & optimizing & changed DB to MongoDB