@@ -5,8 +5,9 @@ import com.example.E_Commerce_API.dao.repository.*;
 import com.example.E_Commerce_API.dto.request.NewProductsRequest;
 import com.example.E_Commerce_API.dto.request.ProductsEditRequest;
 import com.example.E_Commerce_API.dto.response.ProductsEditResponse;
-import com.example.E_Commerce_API.dto.response.ProductsPageResponse;
+import com.example.E_Commerce_API.dto.response.pagination.ProductsPageResponse;
 import com.example.E_Commerce_API.dto.response.ProductsResponse;
+import com.example.E_Commerce_API.exception.CategoryNotFoundException;
 import com.example.E_Commerce_API.exception.ProductsNotFoundException;
 import com.example.E_Commerce_API.exception.RoleNotFoundException;
 import com.example.E_Commerce_API.mapper.ProductsMapper;
@@ -14,12 +15,13 @@ import com.example.E_Commerce_API.security.AuthenticationHelperService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.List;
-import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,12 +36,13 @@ public class ProductsService {
 
     public ProductsPageResponse getAllProducts(String currentUserEmail, int page, int count) {
         Users users = authenticationHelperService.getAuthenticatedUser(currentUserEmail);
-        Page<Products> allProducts = productsRepository.findAll(PageRequest.of(page, count));
 
-        List<ProductsResponse> productsList = new CopyOnWriteArrayList<>(
-                allProducts.getContent().stream()
-                        .map(productsMapper::toProductsResponse)
-                        .toList());
+        Pageable pageable = PageRequest.of(page, count);
+
+        Page<Products> allProducts = productsRepository.findAll(pageable);
+        List<ProductsResponse> productsList = allProducts.getContent().stream()
+                .map(productsMapper::toProductsResponse)
+                .collect(Collectors.toList());
 
         return new ProductsPageResponse(
                 productsList,
@@ -51,11 +54,10 @@ public class ProductsService {
 
     public ProductsPageResponse getAllProductsByCategory(String currentUserEmail, String categoriesName, int page, int count) {
         Users users = authenticationHelperService.getAuthenticatedUser(currentUserEmail);
-        Page<Products> allProductsByCategory = productsRepository.findByCategories_Name(categoriesName, PageRequest.of(page, count));
-        List<ProductsResponse> productsList = new CopyOnWriteArrayList<>(
-                allProductsByCategory.getContent().stream()
-                        .map(productsMapper::toProductsResponse)
-                        .toList());
+        Page<Products> allProductsByCategory = productsRepository.findByCategoriesName(categoriesName, PageRequest.of(page, count));
+        List<ProductsResponse> productsList = allProductsByCategory.stream()
+                .map(productsMapper::toProductsResponse)
+                .collect(Collectors.toList());
 
         return new ProductsPageResponse(
                 productsList,
@@ -67,10 +69,11 @@ public class ProductsService {
 
     public void newProduct(String currentUserEmail, NewProductsRequest newProductsRequest) {
         Users users = authenticationHelperService.getAuthenticatedUser(currentUserEmail);
-        Roles roles = rolesRepository.findByName("CUSTOMER")
+        Roles roles = rolesRepository.findByName("SELLER")
                 .orElseThrow(() -> new RoleNotFoundException("No roles found"));
         users.setRoles(roles);
-        Categories categories = categoriesRepository.findByName(newProductsRequest.getCategoriesName());
+        Categories categories = categoriesRepository.findByName(newProductsRequest.getCategoriesName())
+                .orElseThrow(() -> new CategoryNotFoundException("No category found"));
 
         Products products = new Products();
         products.setName(newProductsRequest.getName());
@@ -81,27 +84,27 @@ public class ProductsService {
         products.setDelivery(newProductsRequest.getDelivery());
         products.setStatus(newProductsRequest.getStatus());
         products.setDescription(newProductsRequest.getDescription());
-        products.setCategories(categories);
-        products.setUsers(users);
+        products.setCategoriesName(categories.getName());
+        products.setUsersId(users.getId());
         products.setCreatedAt(Timestamp.from(Instant.now()));
         products.setImageUrl(newProductsRequest.getImageUrl());
         usersRepository.save(users);
         productsRepository.save(products);
     }
 
-    public void addProductsToBookmarks(String currentUserEmail, Long id) {
+    public void addProductsToBookmarks(String currentUserEmail, String id) {
         Users users = authenticationHelperService.getAuthenticatedUser(currentUserEmail);
         Bookmarks bookmarks = new Bookmarks();
-        bookmarks.setUsers(users);
-        bookmarks.setProducts(productsRepository.findById(id)
-                .orElseThrow(() -> new ProductsNotFoundException("Product not found")));
+        bookmarks.setUsersId(users.getId());
+        bookmarks.setProductsId(id);
         bookmarks.setCreatedAt(Timestamp.from(Instant.now()));
         bookmarksRepository.save(bookmarks);
     }
 
     public ProductsEditResponse editProduct(String currentUserEmail, ProductsEditRequest productsEditRequest) {
         Users users = authenticationHelperService.getAuthenticatedUser(currentUserEmail);
-        Categories categories = categoriesRepository.findByName(productsEditRequest.getCategoriesName());
+        Categories categories = categoriesRepository.findByName(productsEditRequest.getCategoriesName())
+                .orElseThrow(() -> new CategoryNotFoundException("No Category found"));
 
         Products products = productsRepository.findById(productsEditRequest.getId())
                 .orElseThrow(() -> new ProductsNotFoundException("Product not found"));
@@ -113,15 +116,15 @@ public class ProductsService {
         products.setDelivery(productsEditRequest.getDelivery());
         products.setStatus(productsEditRequest.getStatus());
         products.setDescription(productsEditRequest.getDescription());
-        products.setCategories(categories);
+        products.setCategoriesName(productsEditRequest.getCategoriesName());
         products.setUpdatedAt(Timestamp.from(Instant.now()));
         products.setImageUrl(productsEditRequest.getImageUrl());
         return productsMapper.toProductsEditResponse(products);
     }
 
-    public void deleteProduct(String currentUserEmail, Long id) {
+    public void deleteProduct(String currentUserEmail, String id) {
         Users users = authenticationHelperService.getAuthenticatedUser(currentUserEmail);
-        if (productsRepository.existsById(users.getId()) && productsRepository.existsById(id)) {
+        if (productsRepository.existsByUsersId(users.getId()) && productsRepository.existsById(id)) {
             productsRepository.deleteById(id);
         } else {
             throw new ProductsNotFoundException("Product not found");
